# automation

./: CMakeLists.txt  app.c  app.h  async.c  async.h  async_event.c  async_event.h  async_event_monitor.c  async_event_monitor.h  button_monitor.c  command.c  command.h  control_panel.c  core.c  error_event.c  error_event.h  event.c  generic_switch.c  generic_switch.h  gpio_controller.c  gpio_controller.h  gpio_monitor.c  gpio_sensor.c  gpio_sensor.h  gpio_switch.c  gpio_switch.h  gpiopin.c  gpiopin.h  halt..c  halt.h  id.c  led_button.c  led_button.h  server.c  server.h  server_command.c  server_command.h  switch_action.c  switch_action.h  wifi.c  (+1 more)
button_monitor/: button_monitor.c  button_monitor.h
core/: async.c  async.h  async_event.c  async_event.h  control_panel.c  control_panel.h  core..c  core.c  core.h  error_event.c  error_event.h  gpio_sensor.h  gpio_switch.h  gpiopin.c  gpiopin.h  id.h  led_button.c  led_button.h  server.c  server.h  server_command.h  switch_action.c  switch_action.h  unique_id.c  unique_id.h  wifi.c  wifi.h
gpio_controller/: gpio_controller.c  gpio_controller.h
gpio_monitor/: CMakeLists.txt  app_command.c  app_command.h  app_monitor.c  app_monitor.h  control_buttons.c  control_buttons.h  gpio_detector.c  gpio_detector.h  gpio_monitor.c  gpio_monitor.h
src/: CMakeLists.txt  timings.cmake
src/button_monitor/: CMakeLists.txt  button_monitor.c  gpio_pins.cmake
src/core/: CMakeLists.txt  async.c  async.h  async_event.c  async_event.h  control_panel.c  control_panel.h  core.c  error_event.c  error_event.h  gpiopin.c  led_button.c  led_button.h  server.c  server.h  server_command.c  switch_action.c  switch_action.h  wifi.c  wifi.h
src/gpio_controller/: CMakeLists.txt  gpio_controller.c  gpio_pins.cmake
src/gpio_monitor/: CMakeLists.txt  gpio_monitor.c  gpio_monitor.h  gpio_pins.cmake
test/: CMakeLists.txt  automation_tests.c  gpio_pins.cmake  test_recv_run.c  test_send_idfy.c  timings.cmake
test/mock/: CMakeLists.txt  mock.h
test/mock/hardware/: CMakeLists.txt  gpio.c  gpio.h  watchdog.c  watchdog.h
test/mock/hardware/gpio/: CMakeLists.txt  gpio.c
test/mock/hardware/watchdog/: CMakeLists.txt  watchdog.c
test/mock/include/: mock.h
test/mock/include/hardware/: gpio.h  watchdog.h
test/mock/include/lwip/: arch.h  pbuf.h  tcp.h
test/mock/include/mock/: trace.h  trace_match.h  when.h
test/mock/include/pico/: async_context.h  async_context_poll.h  cyw43_arch.h  stdio.h  time.h  types.h  unique_id.h
test/mock/lwip/: pbuf.c  pbuf.h  tcp.c  tcp.h
test/mock/mock/: CMakeLists.txt  trace.c  when.c
test/mock/pico/: CMakeLists.txt  async_context.c  async_context.h  async_context_poll.c  async_context_poll.h  cyw43_arch.c  cyw43_arch.h  stdio.c  stdio.h  stdlib.h  time.c  time.h  unique_id.c  unique_id.h
test/mock/pico/cyw43_arch_lwip_poll/: CMakeLists.txt  async_context.c
test/mock/pico/cyw43_arch_lwip_poll/lwip/: pbuf.c  tcp.c
test/mock/pico/stdio/: CMakeLists.txt
test/mock/pico/stdlib/: CMakeLists.txt  stdlib.c
test/mock/pico/time/: CMakeLists.txt  time.c
test/mock/pico/unique_id/: CMakeLists.txt
test/tests/: CMakeLists.txt  press_off_when_auto.c  recv_run.c  send_idfy.c
